layout bug fix

--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -12,9 +12,6 @@
     margin: 0 10px 0 0;
     border-radius: $size / 2;
   }
-  .title {
-    padding: 0 0 0 40px;
-  }
   nav :global(.fa) {
     font-size: 2em;
     line-height: 20px;
